crates/cubecl-core/tests/error/undeclared_variable.rs
use cubecl_core as cubecl;
use cubecl::prelude::*;

#[cube]
fn kernel(x: UInt) {
    if x == y {
    }
}

fn main() {}
