crates/cubecl-core/tests/error/undeclared_variable.stderr
error: Variable not declared
 --> tests/error/undeclared_variable.rs:6:13
  |
6 |     if x == y {
  |             ^

error[E0425]: cannot find value `y` in this scope
 --> tests/error/undeclared_variable.rs:6:13
  |
6 |     if x == y {
  |             ^ help: a local variable with a similar name exists: `x`
